--- a/style.css
+++ b/style.css
@@ -227,3 +227,40 @@ margin-left: 30px;
      margin-left: 135px;
  }
  
+ 
+ /* Last one Section */
+
+ .background-section {
+    background-image: url('./assets/handshake.jpg');  
+    background-size: cover;  
+    background-position: center;  
+    color: #fff;  
+    text-align: center;  
+    width: 1040px;
+     height: 720;
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);  
+     margin: auto;
+     padding-top: 10%;
+     padding-bottom: 10%;
+     margin-top: 2%;
+     
+ 
+}
+
+.background-section input{
+width: 300px;
+height: 50px;
+border-radius: 5px;
+border: #fff;
+font-family: 'Azeret Mono', monospace;
+
+}
+.background-section button{
+    width: 80px;
+    height: 52px;
+    border-radius: 5px;
+    border: #fff;
+    font-family: 'Azeret Mono', monospace;
+    
+    }
