--- a/style.css
+++ b/style.css
@@ -264,3 +264,20 @@ font-family: 'Azeret Mono', monospace;
     font-family: 'Azeret Mono', monospace;
     
     }
+
+/* Footer */
+
+.footer{
+    display: flex;
+    justify-content:space-between;
+    margin-top: 4%;
+    margin-left: 4%;
+    margin-right: 3%;
+    margin-bottom: 3%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border-radius: 5px;
+ align-items: center;
+   background: #f5f5f5;
+}
+ 
